# speech-text-extraction-pipeline

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini  transcriber_v0.0.0.py  transcriber_v1.0.0.py
docs/: ARCHITECTURE.md  CHANGELOG.md  TIMELINE.md
docs/requirements/: requirements-cpu.txt  requirements-cuda.txt  requirements.txt
src/package/: __init__.py  audio.py  cli_utils.py  config.py  core.py  errors.py  lang_utils.py  logger.py  naming.py  transcriber.py
src/tests/: conftest.py  test_audio.py  test_cli_utils.py  test_config.py  test_core.py  test_lang_utils.py  test_logger.py  test_naming.py  test_transcriber.py
src/tests/resources/: test_expected_golden_output.txt
tools/: README.md  clean_project.sh
