[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-text-extraction-pipeline"
version = "0.0.0"
description = "Python CLI pipeline for media extraction and Whisper transcription"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
transcriber = "package.transcriber:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
