[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-text-extraction-pipeline"
version = "0.0.0"
description = "Python CLI pipeline for media extraction and Whisper transcription"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
transcriber = "package.transcriber:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.reports]
output-format = "text"
score = "y"

[tool.pylint.messages_control]
# A4.2 policy: no global disables. We refactor structural warnings away.
disable = []
